# UI-shop-agent

./: README.md
docs/screenshots/: README.md
shopping-agent/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
shopping-agent/agents/: __init__.py  auth_agent.py  base_agent.py  cart_agent.py  checkout_agent.py  orchestrator.py  search_agent.py
shopping-agent/browser/: __init__.py  playwright_helper.py
shopping-agent/config/: __init__.py  settings.py
shopping-agent/mcp_server/: __init__.py  client.py  server.py
shopping-agent/ui/: __init__.py  chat_interface.py
shopping-agent/workflows/: __init__.py  walmart_shopping.py
